# issuesheriff

./: .env.example  .gitignore  LICENSE  README.md  README.ru.md  publish.py  pyproject.toml
.github/workflows/: triage.yml
examples/: sample_issue.json
issuesheriff/: __init__.py  ai.py  config.py  github_client.py  main.py  similarity.py  utils.py
tests/: test_core.py
